[package]
name = "genTestsBases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.11.0", features = ["hex", "json", "macros"] }
sha2 = "0.9.8"
hex = "0.4.3"
bs58 = "0.4.0"
base58-monero = "0.3.2"
base58 = "0.2.0"
data-encoding = "2.3.2"
bech32 = "0.8.1"